updates and missing tests